Make the fix to visible scrollbar when loading TweetDeck more reliable

--- a/Resources/Scripts/styles/browser.css
+++ b/Resources/Scripts/styles/browser.css
@@ -1,11 +1,3 @@
-/***********/
-/* General */
-/***********/
-
-body {
-  margin: 0;
-}
-
 /***********************/
 /* Redesign scrollbars */
 /***********************/
